css/style.css
/* Box Model Hack */
* {
  box-sizing: border-box;
}

:root {
  /* icon size increases / decreases the icon size. 0rem means it's native font size - 16.2px */
  --icon-size: 0rem;
  
  /* icon gap pushes the rightmost element to the right this amount. icon stays stationary in the left margin  */
  --icon-gap: 0rem;

  /* --icon-vertical-offset: 2%; currently unused.*/

  /* section gap controls the gap below each major section. Increase adds more space */
  --section-gap: 3.125rem;

  /* icon gutter controls the icon offset from the rightmost element */
  --icon-gutter: 2.5rem;

  /* adjusting to get the icon and the right most elements to work in sync */

  
  /* p */
  --fs-2: 1rem;
  /* h1 */
  --fs-8: 2.027rem;
   /* h2 */
  --fs-7: 1.802rem;
  /* h3 */
  --fs-6: 1.602rem;
  /* h4 */
  --fs-5: 1.424rem;
  /* h5 */
  --fs-4: 1.266rem;
  /* h6 */
  --fs-3: 1rem;
  /* captioning */
  --fs-1: .9rem;
}

body {
  font-family: Helvetica, sans-serif;
  margin: 10%;
}
.page-wrapper{
  max-width: 1100px;
  margin: 0 auto;
}

main {
  margin-bottom: 12%;
}

section {
  margin-bottom: var(--section-gap)
}

img {
  display: block;
  margin: 0 auto;
  width: 25%;
}

a {
  text-decoration: none;
}

span {
  color: rgb(240, 183, 181);
}
h1 {
  font-size: var(--fs-8) 
}
h2 {
  font-size: var(--fs-7);
  font-weight: 600;
}
h3{
  font-size: var(--fs-6);
}
h4{
  font-size: var(--fs-5);
}

h5{
  font-size: var(--fs-4);
}
h6{
  font-size: var(--fs-3);
}
p {
  font-size: var(--fs-1);
}


/* Material icons base */
.material-symbols-outlined {
  font-family: 'Material Symbols Outlined';
  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
  font-style: normal;
  font-weight: normal;
  font-size: var(--icon-size);
  line-height: 1;
  display: inline-block;
  position: relative;
  margin-left: calc(-1 * var(--icon-gutter))
}

/* David logo header */
.header-graphic{
  margin-bottom:var(--section-gap);
}
/* Intro Paragraph with icon */
.intro-p-icon-container {
  display: grid;
  grid-template-columns: var(--icon-size) 1fr;
  column-gap: var(--icon-gap);
  margin-bottom: var(--section-gap);
}
.material-symbols-outlined.section-icon.subject{
  /* resolves the icon sitting too high */
  padding-top: .25rem;
   
}

/* The intro paragraph is being treated as h2 */
.intro-p {
  font-size: var(--fs-7);
  line-height: 1.35;
  margin: 0;
}
.p-link {
  font-weight: 600;
  color: rgb(240, 183, 181);
}

/* Client logos and contact */
.clients-wrapper {
  display: flex;
  gap: 2%;
  width: 100%;
}
.logos-container {
    display: grid;
    grid-template-columns: var(--icon-size) 1fr;
    column-gap: var(--icon-gap);
    margin-bottom: var(--section-gap);
    width: 50%;
    padding-right: 10%;
    
}
.logo-list {
  display: flex;
  /* justify-content: space-between; */
  flex-wrap: wrap;
  line-height: 1.5;
  
}
.corporate-client.logo{
  padding: 0 1rem 1rem 0rem;
  
}
.logo span{
  color:black;
  font-weight: 600;
  font-size: var(--fs-3)
}
.contact-container {
  width: 50%;
  display: grid;
  grid-template-columns: var(--icon-size) 1fr;
  column-gap: var(--icon-gap);
  margin-bottom: var(--section-gap);
  padding-left: calc(1 * var(--icon-gutter))
}
.material-symbols-outlined.section-logo.star{
  margin-left: 0;
  margin-left: calc(-1 * var(--icon-gutter));
  
}
.contact-list {
  display: flex;
  line-height: 1.5;
  font-weight: 600;
  font-size: var(--fs-3)
}
.contact-list a{
  color: black;
}

/* Projects Section heading with icon */
.section-heading {
  display: grid;
  grid-template-columns: var(--icon-size) 1fr;
  gap: var(--icon-gap);
  margin-bottom: var(--section-gap);
}




/* Project grid */
.project-section-container{
  width: 100%;
}
.projects-wrapper {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 1rem;
  width: 100%;
}
.project-div {
  width: 48%;
}
.project-img {
  height: 30vh;
  max-height: 400px;
  min-height: 300px;
  outline: 2px dotted gray;
  border-radius: 1%;
}
.project-name{
  font-weight: 400;
  color: gray
}
.project-img a {
  padding: 2.5%;
}
.project-text {
  display: flex;
  justify-content: space-between;
  padding: 3% 0 10% 0;
  font-weight: 600;
  font-size: var(--fs-2);
}
.material-symbols-outlined.project-icon.arrow{
  margin: 0rem;
  color: black;
  font-size: 1rem;
  margin-top: -.3rem;
  padding-left: .25rem;
  
}


/* ---------------------- */
/* breakpoints */
/* ---------------------- */
@media (max-width: 1050px) {
  body{
    margin: 12%;
  }
    :root{
  --fs-2: 1.25rem;
  /* h1 */
  --fs-8: 2.527rem;
   /* h2 */
  --fs-7: 2.502rem;
  /* h3 */
  --fs-6: 2.102rem;
  /* h4 */
  --fs-5: 1.924rem;
  /* h5 */
  --fs-4: 1.766rem;
  /* h6 */
  --fs-3: 1.35rem;
  /* captioning */
  --fs-1: 1rem;
  }
  /* icon adjustments */
  /* star */
  .material-symbols-outlined.section-logo.star{
  margin-left: calc(-1 * var(--icon-gutter));
  position: relative;
  padding-top: .25rem;
  }
  /* smiley */
  .material-symbols-outlined.satisfied{
    padding-top: .25rem;
  }
  .clients-wrapper,
  .projects-wrapper{
    flex-direction: column;
  }
  .contact-container{
    width: 100%;
    grid-template-columns: var(--icon-size) 1fr;
    column-gap: var(--icon-gap);
    margin-bottom: var(--section-gap);
    padding-left: 0;
}
  .contact-list{
    margin: 0;
  } 
  
  .logos-container{
    padding-right: 0;
    width: 85%;
  }
  .logo-list{
    justify-content: flex-start;
  }
  .project-div{
    width: 100%;
    height: 40vh;
    margin-bottom: var(--section-gap)
  }
  .project-img{
    height: 20vh;
    min-height: 300px;
    max-height: 400px;
  }
  .project-text{
    padding: 3% 0 5% 0;
  }

}

@media (max-width: 850px){

  .logos-container{
    width: 100%;
  }
  .material-symbols-outlined{
    visibility: collapse;
  }
 
  
}

@media (max-width: 700px) {
  
}

/* Margins */


/* Structural */

